--- a/FizzBuzz.Tests/FizzBuzz.Tests.csproj
+++ b/FizzBuzz.Tests/FizzBuzz.Tests.csproj
@@ -20,4 +20,8 @@
         <Using Include="Xunit"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\FizzBuzz\FizzBuzz.csproj" />
+    </ItemGroup>
+
 </Project>
